package net.proselyte.basepatterns.structural.flyweight;

public class CppDeveloper {
}
