package net.proselyte.basepatterns.structural.proxy;

public class ProjectRunner {
    public static void main(String[] args) {

    }
}
